# interbrain-network-embedding

./: .gitignore  LICENSE.md  README.md  pyproject.toml
data/: channel2mni.csv
interbrainnetworks/embeddings/: __init__.py  embedding.py  networkembedding.py
interbrainnetworks/networks/: __init__.py  networks.py  testdata.py  topology.py
tests/: test_embedding.py  test_networkembedding.py  test_networks.py  test_testdata.py  test_topology.py
tests/data/: ibn.pkl  network_data.parquet  network_data.parquet.asd  rest.parquet  rest_permutation.parquet  task.parquet  task_permutation.parquet
tests/data/graphs/: 16_8_cooperation_peer_Block_2_salient_wco_scaled_Hbo_interbrainnetwork.gexf  17_8_cooperation_stranger_Block_2_salient_wco_scaled_Hbo_interbrainnetwork.gexf  21_1_rest_stranger_Block_0_salient_wco_scaled_Hbo_interbrainnetwork.gexf  26_4_rest_peer_Block_0_salient_wco_scaled_Hbo_interbrainnetwork.gexf  3_1_cooperation_stranger_Block_1_salient_wco_scaled_Hbo_interbrainnetwork.gexf  4_2_cooperation_peer_Block_1_salient_wco_scaled_Hbo_interbrainnetwork.gexf
